--- a/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
@@ -109,7 +109,8 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gdP-m8-7W4">
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.40013020824142276" green="0.51706008241296963" blue="0.60996430990103101" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <inset key="scrollIndicatorInsets" minX="0.0" minY="5" maxX="0.0" maxY="5"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="MNV-sd-RRq"/>
@@ -122,6 +123,9 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Requests List" image="list.bullet.rectangle" catalog="system" id="55h-t8-O8n"/>
+                    <connections>
+                        <outlet property="tableViewForRequestedData" destination="gdP-m8-7W4" id="yrb-qL-Dgu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pFB-cW-1RE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
