--- a/WeatherApp/WeatherApp/Cells/CurrrentWeather/CurrentWeatherCell.xib
+++ b/WeatherApp/WeatherApp/Cells/CurrrentWeather/CurrentWeatherCell.xib
@@ -9,53 +9,54 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="CurrentWeatherCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="CurrentWeatherCell" rowHeight="250" id="KGk-i7-Jjw" customClass="CurrentWeatherCell" customModule="WeatherApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="250" height="230"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="CurrentWeatherCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="CurrentWeatherCell" rowHeight="200" id="KGk-i7-Jjw" customClass="CurrentWeatherCell" customModule="WeatherApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="250" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="250" height="230"/>
+                <rect key="frame" x="0.0" y="0.0" width="250" height="200"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="N1V-xd-pn8">
-                        <rect key="frame" x="0.0" y="0.0" width="250" height="230"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="N1V-xd-pn8">
+                        <rect key="frame" x="0.0" y="0.0" width="250" height="200"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l5Y-4o-NYT">
-                                <rect key="frame" x="0.0" y="0.0" width="250" height="50"/>
+                                <rect key="frame" x="0.0" y="0.0" width="250" height="90"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="7MY-9g-FXR"/>
+                                    <constraint firstAttribute="height" constant="90" id="7MY-9g-FXR"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="60"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iko-R2-gZV">
-                                <rect key="frame" x="0.0" y="61.5" width="250" height="75"/>
+                                <rect key="frame" x="0.0" y="90" width="250" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="75" id="byJ-TN-cha"/>
+                                    <constraint firstAttribute="height" constant="40" id="byJ-TN-cha"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RwI-Mt-Uck">
-                                <rect key="frame" x="0.0" y="148.5" width="250" height="35"/>
+                                <rect key="frame" x="0.0" y="130" width="250" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="SDd-Vw-dgX"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HXz-GF-HcS">
-                                <rect key="frame" x="0.0" y="195" width="250" height="35"/>
+                                <rect key="frame" x="0.0" y="165" width="250" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="FEm-f5-AY5"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <color key="backgroundColor" red="0.4001302082" green="0.51706008240000001" blue="0.60996430989999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </stackView>
                 </subviews>
                 <constraints>
