--- a/WeatherApp/WeatherApp/Cells/DailyWeather/DailyWeatherCell.xib
+++ b/WeatherApp/WeatherApp/Cells/DailyWeather/DailyWeatherCell.xib
@@ -19,40 +19,41 @@
                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ykS-Fh-7aS">
                         <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRh-1Y-Vgn">
-                                <rect key="frame" x="0.0" y="0.0" width="70" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRh-1Y-Vgn">
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="WLB-0L-cl8"/>
+                                    <constraint firstAttribute="width" constant="40" id="WLB-0L-cl8"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dEJ-2f-SFB">
-                                <rect key="frame" x="70" y="0.0" width="150" height="30"/>
+                                <rect key="frame" x="40" y="0.0" width="100" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="izt-dJ-wPR"/>
+                                    <constraint firstAttribute="width" constant="100" id="izt-dJ-wPR"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ny-8l-y9S">
-                                <rect key="frame" x="220" y="0.0" width="40" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ny-8l-y9S">
+                                <rect key="frame" x="140" y="0.0" width="80" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="uer-d6-Bed"/>
+                                    <constraint firstAttribute="width" constant="80" id="uer-d6-Bed"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NV2-4S-dEb">
-                                <rect key="frame" x="260" y="0.0" width="40" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NV2-4S-dEb">
+                                <rect key="frame" x="220" y="0.0" width="80" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="3fi-uZ-Iky"/>
+                                    <constraint firstAttribute="width" constant="80" id="3fi-uZ-Iky"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <color key="backgroundColor" red="0.4001302082" green="0.51706008240000001" blue="0.60996430989999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </stackView>
                 </subviews>
                 <constraints>
